src/test/testFiles/invalid/semanticErrors/missingReturnInFunction.manimdsl
fun func2(x: number): number {
    let z: number = x + 1;
}

let z = func2(5);